[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-rust>=1.5.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-router"
version = "0.1.9"
description = "High-performance Rust-based load balancer for SGLang with multiple routing algorithms and prefill-decode disaggregation support"
authors = [{name = "Byron Hsu", email = "byronhsu1230@gmail.com"}]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "requests>=2.25.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    # runtime deps needed during test import
    "setproctitle>=1.3.6",
    "requests>=2.25.0",
    "aiohttp>=3.9.0",
    "orjson>=3.9.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
]

# https://github.com/PyO3/setuptools-rust?tab=readme-ov-file
[tool.setuptools.packages]
find = { where = ["py_src"] }

# workaround for https://github.com/pypa/twine/issues/1216
[tool.setuptools]
license-files = []
