[package]
name = "sglang-frontend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sglang_frontend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.2"
zmq = "0.10"
rmpv = "1.3"
tokenizers = { version = "0.21", features = ["http"] }
base64 = "0.22"
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
indexmap = "2"
tokio = { version = "1", features = ["full"] }
rayon = "1"

# HTTP server and tokenizer manager
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
dashmap = "6"
tower-http = { version = "0.6", features = ["cors"] }
minijinja = "2"
