[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sglang-grpc"
version = "0.1.0"
description = "In-process Rust gRPC server for SGLang inference engine"
requires-python = ">=3.10,<3.14"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
]

[tool.maturin]
python-source = "src"
module-name = "sglang_grpc._core"
