[package]
name = "sglang-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sglang_server"
# cdylib: the pyo3 module imported by the (embedded) Python scheduler process.
# rlib:   so optional standalone bins / integration tests can link the core.
crate-type = ["cdylib", "rlib"]

[dependencies]
# --- Python boundary (only crossed by recv_requests / push_chunk) ---
pyo3 = { version = "0.29.0", features = ["extension-module"] }

# --- async API server (I/O bound) ---
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "signal"] }
axum = { version = "0.8.9", features = ["json", "tokio"] }
futures = "0.3"
async-stream = "0.3"

# --- inter-stage transport: MPMC, move-only (zero copy), lock-free fast path ---
flume = "0.12.0"

# --- zero-copy payloads: refcounted byte buffers for fan-out to detok shards ---
bytes = "1"

# --- msgpack wire format, aligned with the Python dev/msgpack-migration schema ---
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- CPU core binding for the runtime pools ---
core_affinity = "0.8"

# --- ids / misc ---
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# tokenizer
dynamo-tokenizers = "1.3.2"

# Offline HF Hub cache lookup only (no `tokio`/`ureq`/TLS features) — resolves a
# repo id to its already-downloaded local tokenizer.json without network/openssl.
hf-hub = { version = "0.5.0", default-features = false }
